/*
* Set up: 
* $ go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
* $ go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
*
* Add `<GOPATH>/bin` to your $PATH:
* OR (!suboptimal since it overwrites $PATH by appending an additional 
* line as opposed to change it directly)
* $ echo "export PATH=$PATH:$(go env GOPATH)/bin" >> ~/.profile 
* $ source ~/.profile 
* OR temporarily
* $ export PATH="$PATH:$(go env GOPATH)/bin"
*/
syntax = "proto3";

package gptfaas;

option go_package = "gptproto/proto";

service Executor {
  // Remote execution via RPC call.
  rpc Execute (GPTFaasRequest) returns (GPTFaasReply) {}
}

message GPTFaasRequest {
  string message = 1;           // Text message field.
  uint32 batchsize = 2;         // batch size 
  uint32 runtimeInMilliSec = 3; // Execution runtime [ms].
  uint32 gpuMemoryInMebiBytes = 4; // Request memory usage [MiB].
  repeated float promptTensor = 5 [packed = true]; // prompt inputs
}

message GPTFaasReply {
  string message = 1;             // Text message field.
  uint32 durationInSec = 2;   // Execution latency [Âµs].
  uint32 gpuMemoryInMebiBytes = 3;     // Memory usage [MiB].
  repeated float promptGradient = 4 [packed = true]; // prompt gradients
}
